--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 /* Common body parameters of all site pages */
 body {
-    position: relative;
-    width: 1600px;
-    background: #FFF;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    color: #757575;
+    position: relative; /* ? */
+    width: 1600px; /* ? */
+    background: #FFF; /* ? */
+    font-family: 'Roboto', sans-serif; /* + */
+    font-weight: 400; /* ? */
+    color: #757575; /* + */
 }
 
 /* Site-nav link state at hover, focus & active*/
