--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,110 @@
 /* Palette of colors */
 /* Maine page background color -  #FFF */
-/* Secondary page background color - #2F303A */
+/* Secondary page background color - #F5F4FA */
+/* Complementary page background color - #2F303A */
     /* Maine text color - #757575 */
     /* Secondary text color - #212121 */
     /* Complementary text color - #FFF */
-    /* Accent text color - #2196F3*/
+    /* Accent text color - #2196F3 */
     /* Individual color of some text in footer - rgba(255, 255, 255, 0.6) */
+
+/* Create custom CSS properties to set Background and Text colors */
+:root {
+    --maine-background-color: #FFF;
+    --secondary-background-color: #F5F4FA;
+    --complementary-background-color: #2F303A;
+    --maine-text-color: #757575;
+    --secondary-text-color: #212121;
+    --complementary-text-color: #FFF;
+    --accent-text-color: #2196F3;
+    --individual-text-color: rgba(255, 255, 255, 0.6);
+}
+
+
+
+/* Utility class for resetting settings */
+.list {
+    list-style: none;
+}
 
 /* Common body parameters of all site pages */
 body {
-    background: #FFF; /* + */
-    color: #757575; /* + */
-    font-family: 'Roboto', sans-serif; /* + */
+    background: var(--maine-background-color); /* + */
+    color: var(--maine-text-color); /* + */
+    font-family: 'Roboto', sans-serif; /* ? */
     font-weight: 400; /* ? */
     
 }
 
+/* Website logo */
 .logo {
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 31px;
-    letter-spacing: 0.03em;
-    color: #2196F3;  /* Цвет должен быть задан переменной???*/
+    text-decoration: none;
+    font-weight: 700; /* ? */
+    font-size: 26px; /* ? */
+    line-height: 31px; /* ? */
+    letter-spacing: 0.03em; /* ? */
+    color: #2196F3;  /* Цвет должен быть задан переменной??? */
 }
+    .logo__second-half {
+        color: #000; /* Цвет должен быть задан переменной??? */
+    }
 
-/* Site-nav link state at hover, focus & active*/
-.site-nav__link:hover,
-.site-nav__link:focus {
-    color: #2196F3;
+/* Site navigation */
+.site-nav__link {
+    text-decoration: none;
+    font-style: normal; /* ? */
+    font-weight: 500; /* ? */
+    font-size: 14px; /* ? */
+    line-height: 16px; /* ? */
+    letter-spacing: 0.02em; /* ? */
+    color: var(--secondary-text-color); /* + */
 }
+    .site-nav__link:hover,
+    .site-nav__link:focus {
+        color: var(--accent-text-color); /* + */
+    }
+
+/* Contact information */
 
 /* Contacts link state at hover, focus & active*/
 .contacts__link:hover,
 .contacts__link:focus {
-    color: #2196F3;
+    color: var(--accent-text-color); /* + */
+}
+
+/* Шапка - "Hero" */
+.hero {
+    background-color: var(--complementary-background-color); /* + */
+}
+    .hero__title {
+        font-style: normal; /* ? */
+        font-weight: 900; /* ? */
+        font-size: 44px; /* ? */
+        line-height: 60px; /* ? */
+        text-align: center; /* ? */
+        letter-spacing: 0.06em; /* ? */
+        text-transform: uppercase; /* ? */
+        color: var(--complementary-text-color); /* + */
+    }
+
+/* General settings for "sections" of all pages of the site */
+.section__title {
+    font-style: normal; /* ? */
+    font-weight: 700; /* ? */
+    font-size: 36px; /* ? */
+    line-height: 42px; /* ? */
+    text-align: center; /* ? */
+    letter-spacing: 0.03em; /* ? */
+    color: var(--secondary-text-color); /* + */
+}
+
+/* Особливості - "Peculiarities", page index.html */
+.peculiarities-list__title {
+    font-style: normal; /* ? */
+    font-weight: 700; /* ? */
+    font-size: 14px; /* ? */
+    line-height: 16px; /* ? */
+    letter-spacing: 0.03em; /* ? */
+    text-transform: uppercase; /* ? */
+    color: var(--secondary-text-color); /* + */
 }
