--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,14 @@
     --individual-text-color: rgba(255, 255, 255, 0.6);
 }
 
-
-
-/* Utility class for resetting settings */
+/* Utility class for resetting settings lists*/
 .list {
     list-style: none;
+}
+
+/* Utility class for resetting settings links */
+.link {
+    text-decoration: none;
 }
 
 /* Common body parameters of all site pages */
@@ -39,19 +42,22 @@ body {
 /* Website logo */
 .logo {
     text-decoration: none;
-    font-weight: 700; /* ? */
-    font-size: 26px; /* ? */
+    font-weight: 700; /* + */
+    font-size: 26px; /* + */
     line-height: 31px; /* ? */
     letter-spacing: 0.03em; /* ? */
-    color: #2196F3;  /* Цвет должен быть задан переменной??? */
+    color: var(--accent-text-color);  /* + */
 }
-    .logo-second-half {
+    .logo-second-half-head {
         color: #000; /* Цвет должен быть задан переменной??? */
+    }
+    .logo-second-half-foot {
+        color: var(--complementary-text-color); /* + */
     }
 
 /* Site navigation */
 .site-nav-link {
-    text-decoration: none;
+    text-decoration: none; /* + */
     font-style: normal; /* ? */
     font-weight: 500; /* ? */
     font-size: 14px; /* ? */
@@ -64,12 +70,48 @@ body {
         color: var(--accent-text-color); /* + */
     }
 
-/* Contact information */
+/* Utility class for simulating the display of the current position on site in the site menu */
+.current-position {
+    color: var(--accent-text-color);
+}
 
-/* Contacts link state at hover, focus & active*/
-.contacts-link:hover,
-.contacts-link:focus {
+/* Contact information */
+.contacts-head {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: var(--maine-text-color);
+}
+
+.contacts-foot, .contacts-map {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: var(--individual-text-color);
+}
+
+.contacts-map {
+    color: var(--complementary-text-color);
+}
+
+/* Contacts links state at hover & focus */
+.contacts-head:hover,
+.contacts-head:focus,
+.contacts-foot:hover,
+.contacts-foot:focus,
+.contacts-map:hover,
+.contacts-map:focus{
     color: var(--accent-text-color); /* + */
+}
+
+/* Підвал */
+.footer {
+    background-color: var(--complementary-background-color);
 }
 
 /* Шапка - "Hero" */
@@ -81,24 +123,54 @@ body {
         font-weight: 900; /* ? */
         font-size: 44px; /* ? */
         line-height: 60px; /* ? */
-        text-align: center; /* ? */
         letter-spacing: 0.06em; /* ? */
         text-transform: uppercase; /* ? */
         color: var(--complementary-text-color); /* + */
     }
 
+    .herro-button {
+        /* Button interactivity settings */
+        cursor: pointer; /* + */
+        /* Button geometry */
+        background: var(--accent-text-color); /* + */        
+        border-radius: 4px; /* ? */
+        border: 1px solid #000000; /* ? */
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); /* ? */
+        width: 216px; /* ? */
+        height: 50px; /* ? */
+        /* Button text */
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 30px;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 0.06em;
+        color: var(--complementary-text-color); /* + */
+    }
+        /* Interactivity of changing the appearance of herro-button */
+        .herro-button:hover,
+        .herro-button:focus {
+        background-color: #188CE8; /* ? */
+        border: none;
+        }
+
 /* General settings for "sections" of all pages of the site */
+
+.section-highlighted {
+    background-color: var(--secondary-background-color);
+}
+
 .section-title {
     font-style: normal; /* ? */
     font-weight: 700; /* ? */
     font-size: 36px; /* ? */
     line-height: 42px; /* ? */
-    text-align: center; /* ? */
     letter-spacing: 0.03em; /* ? */
     color: var(--secondary-text-color); /* + */
 }
 
-/* Особливості - "Peculiarities", page index.html */
+/* Особливості - "Peculiarities", section on page index.html */
 .peculiarities-list-title {
     font-style: normal; /* ? */
     font-weight: 700; /* ? */
@@ -108,3 +180,43 @@ body {
     text-transform: uppercase; /* ? */
     color: var(--secondary-text-color); /* + */
 }
+
+/* Наша команда, section on page index.html */
+.team {
+
+}
+
+.team-name {
+    font-style: normal; /* ? */
+    font-weight: 500; /* ? */
+    font-size: 16px; /* ? */
+    line-height: 19px; /* ? */
+    letter-spacing: 0.03em; /* ? */
+    color: var(--secondary-text-color); /* + */
+}
+
+/* Наші роботи, section in main on page portfolio.html*/
+.portfolio-batton {
+    /* Button interactivity settings */
+    cursor: pointer;
+    /* Button geometry */
+    background: var(--secondary-background-color); /* + */
+    border-radius: 4px; /* ? */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); /* ? */
+    /* Button text */
+    color: var(--secondary-text-color); /* + */
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+    /* Interactivity of changing the appearance of portfolio-buttons */
+        .portfolio-batton:hover,
+        .portfolio-batton:focus {
+        background-color: var(--accent-text-color); /* + */
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
+        }
