--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
     --complementary-text-color: #FFF;
     --accent-text-color: #2196F3;
     --individual-text-color: rgba(255, 255, 255, 0.6);
+    --logo-dicor-color: #000;
 }
 
 /* Utility class for resetting settings lists*/
@@ -34,22 +35,20 @@
 body {
     background: var(--maine-background-color); /* + */
     color: var(--maine-text-color); /* + */
-    font-family: 'Roboto', sans-serif; /* ? */
-    font-weight: 400; /* ? */
-    
+    font-family: 'Roboto', sans-serif; /* + */
+    letter-spacing: 0.03em; /* + */
 }
 
 /* Website logo */
 .logo {
-    text-decoration: none;
-    font-weight: 700; /* + */
+    text-decoration: none; /* + */
+    font-family: 'Raleway', sans-serif; /* + */
     font-size: 26px; /* + */
-    line-height: 31px; /* ? */
-    letter-spacing: 0.03em; /* ? */
+    line-height: 1.2; /* + */
     color: var(--accent-text-color);  /* + */
 }
     .logo-second-half-head {
-        color: #000; /* Цвет должен быть задан переменной??? */
+        color: var(--logo-dicor-color); /* + */
     }
     .logo-second-half-foot {
         color: var(--complementary-text-color); /* + */
@@ -58,11 +57,10 @@ body {
 /* Site navigation */
 .site-nav-link {
     text-decoration: none; /* + */
-    font-style: normal; /* ? */
-    font-weight: 500; /* ? */
-    font-size: 14px; /* ? */
-    line-height: 16px; /* ? */
-    letter-spacing: 0.02em; /* ? */
+    font-weight: 500; /* + */
+    font-size: 14px; /* + */
+    line-height: 1.2; /* + */
+    letter-spacing: 0.02em; /* + */
     color: var(--secondary-text-color); /* + */
 }
     .site-nav-link:hover,
@@ -77,26 +75,24 @@ body {
 
 /* Contact information */
 .contacts-head {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: var(--maine-text-color);
+    text-decoration: none; /* + */
+    font-weight: 500; /* + */
+    font-size: 14px; /* + */
+    line-height: 1.14; /* + */
+    letter-spacing: 0.02em; /* + */
+    color: var(--maine-text-color); /* + */
 }
 
 .contacts-foot, .contacts-map {
-    text-decoration: none;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    color: var(--individual-text-color);
+    font-style: normal; /* + */
+    text-decoration: none; /* + */
+    font-size: 14px; /* + */
+    line-height: 1.7; /* + */
+    color: var(--individual-text-color); /* + */
 }
 
 .contacts-map {
-    color: var(--complementary-text-color);
+    color: var(--complementary-text-color); /* + */
 }
 
 /* Contacts links state at hover & focus */
@@ -111,7 +107,7 @@ body {
 
 /* Підвал */
 .footer {
-    background-color: var(--complementary-background-color);
+    background-color: var(--complementary-background-color); /* + */
 }
 
 /* Шапка - "Hero" */
@@ -119,12 +115,12 @@ body {
     background-color: var(--complementary-background-color); /* + */
 }
     .hero-title {
-        font-style: normal; /* ? */
-        font-weight: 900; /* ? */
-        font-size: 44px; /* ? */
-        line-height: 60px; /* ? */
-        letter-spacing: 0.06em; /* ? */
-        text-transform: uppercase; /* ? */
+        font-weight: 900; /* + */
+        font-size: 44px; /* + */
+        line-height: 1.4; /* + */
+        letter-spacing: 0.06em; /* + */
+        text-align: center; /* + */
+        text-transform: uppercase; /* + */
         color: var(--complementary-text-color); /* + */
     }
 
@@ -139,20 +135,19 @@ body {
         width: 216px; /* ? */
         height: 50px; /* ? */
         /* Button text */
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 30px;
-        align-items: center;
-        text-align: center;
-        letter-spacing: 0.06em;
+        font-family: inherit; /* + */
+        font-weight: 700; /* + */
+        font-size: 16px; /* + */
+        line-height: 1.9; /* + */
+        text-align: center; /* + */
+        letter-spacing: 0.06em; /* + */
         color: var(--complementary-text-color); /* + */
     }
         /* Interactivity of changing the appearance of herro-button */
         .herro-button:hover,
         .herro-button:focus {
         background-color: #188CE8; /* ? */
-        border: none;
+        border: none; /* ? */
         }
 
 /* General settings for "sections" of all pages of the site */
@@ -162,61 +157,76 @@ body {
 }
 
 .section-title {
-    font-style: normal; /* ? */
-    font-weight: 700; /* ? */
-    font-size: 36px; /* ? */
-    line-height: 42px; /* ? */
-    letter-spacing: 0.03em; /* ? */
+    text-align: center; /* + */
+    font-weight: 700; /* + */
+    font-size: 36px; /* + */
+    line-height: 1.2; /* + */
     color: var(--secondary-text-color); /* + */
 }
 
 /* Особливості - "Peculiarities", section on page index.html */
 .peculiarities-list-title {
-    font-style: normal; /* ? */
-    font-weight: 700; /* ? */
-    font-size: 14px; /* ? */
-    line-height: 16px; /* ? */
-    letter-spacing: 0.03em; /* ? */
-    text-transform: uppercase; /* ? */
+    font-weight: 700; /* + */
+    font-size: 14px; /* + */
+    line-height: 1.14; /* + */
+    text-transform: uppercase; /* + */
     color: var(--secondary-text-color); /* + */
+}
+
+.peculiarities-list-text {
+    font-size: 14px;
+    line-height: 1.7;
 }
 
 /* Наша команда, section on page index.html */
-.team {
-
-}
-
 .team-name {
-    font-style: normal; /* ? */
-    font-weight: 500; /* ? */
-    font-size: 16px; /* ? */
-    line-height: 19px; /* ? */
-    letter-spacing: 0.03em; /* ? */
+    font-weight: 500; /* + */
+    font-size: 16px; /* + */
+    line-height: 1.2; /* + */
     color: var(--secondary-text-color); /* + */
 }
 
+.team-position {
+    font-size: 16px; /* + */
+    line-height: 1.2; /* + */
+}
+
 /* Наші роботи, section in main on page portfolio.html*/
+/* Settings of filter buttons */
 .portfolio-batton {
     /* Button interactivity settings */
-    cursor: pointer;
+    cursor: pointer; /* + */
     /* Button geometry */
     background: var(--secondary-background-color); /* + */
     border-radius: 4px; /* ? */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); /* ? */
     /* Button text */
     color: var(--secondary-text-color); /* + */
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
-    text-align: center;
-    letter-spacing: 0.03em;
+    font-family: inherit; /* + */
+    font-weight: 500; /* + */
+    font-size: 16px; /* + */
+    line-height: 1.6; /* + */
+    text-align: center; /* + */
 }
 
     /* Interactivity of changing the appearance of portfolio-buttons */
         .portfolio-batton:hover,
         .portfolio-batton:focus {
         background-color: var(--accent-text-color); /* + */
-        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-        border-radius: 4px;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); /* ? */
+        border-radius: 4px; /* ? */
         }
+
+.portfolio-title {
+    font-weight: 700; /* + */
+    font-size: 18px; /* + */
+    line-height: 2; /* + */
+    letter-spacing: 0.06em; /* + */
+    color: var(--secondary-text-color); /* + */
+}
+
+.portfolio-project {
+    font-size: 16px; /* + */
+    line-height: 1.9; /* + */
+    color: var(--maine-text-color); /* + */
+}
