--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@ body {
 
 /* Наші роботи, section in main on page portfolio.html*/
 /* Settings of filter buttons */
-.portfolio-batton {
+.portfolio-button {
     /* Button interactivity settings */
     cursor: pointer; /* + */
     /* Button geometry */
@@ -210,8 +210,8 @@ body {
 }
 
     /* Interactivity of changing the appearance of portfolio-buttons */
-        .portfolio-batton:hover,
-        .portfolio-batton:focus {
+        .portfolio-button:hover,
+        .portfolio-button:focus {
         background-color: var(--accent-text-color); /* + */
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); /* ? */
         border-radius: 4px; /* ? */
