Fix text tabuletion on peculiarities-list-title and add utility class 'visually-hidden' to hiden titles

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,20 @@
     text-decoration: none;
 }
 
+/* Utility class that hides the display of headings from the user, but remains they visible to search engines */
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
 /* Common body parameters of all site pages */
 body {
     background: var(--maine-background-color); /* + */
